--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
           Sobre a nossa <span class="laranja">empresa</span>
         </h3>
         <div id="conteudo-sobre">
-          <img src="#" alt="" id="imagem-loja" />
+          <img src="" alt="" id="imagem-loja" />
           <p id="texto-sobrenos">
             Lorem ipsum dolor sit amet. Sed libero autem est molestiae iure vel
             maxime aliquam a ipsa nisi aut sint eligendi et consectetur
