--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   </head>
   <body id="inicio">
     <nav>
-      <img src="assets/images/logo-digital.png" alt="Logo FM" id="logo" />
+      <a href="#"
+        ><img src="assets/images/logo-digital.png" alt="Logo FM" id="logo"
+      /></a>
       <ul id="lista-nav">
         <li id="nav-inicio" data-target="inicio">
           <svg
@@ -79,7 +81,11 @@
             clip-rule="evenodd"
           />
         </svg>
-        <span>Fale Conosco</span>
+        <a
+          href="https://api.whatsapp.com/send?phone=5514996443062&text=Ol%C3%A1+Digital+Marketing%2C+vim+pelo+Instagram%2C+gostaria+de+saber+mais+sobre+seus+servi%C3%A7os&fbclid=PAZXh0bgNhZW0CMTEAAaeWxXMN8wS_0Ybp7Zpf1axfaGh8TGPq0yelaZ-cDQOukfPlV2aeXeD0p8vf8A_aem_eRjnWI4mqwaZL-htIx57pA"
+          target="_blank"
+          ><span>Fale Conosco</span></a
+        >
       </div>
     </nav>
     <header id="inicio">
@@ -93,19 +99,25 @@
           Conectamos marcas às pessoas certas com estratégia e criatividade.
         </p>
         <div id="botao-instagram">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="16"
-            height="16"
-            fill="currentColor"
-            class="bi bi-instagram"
-            viewBox="0 0 16 16"
-            id="svg-insta"
+          <a
+            href="https://www.instagram.com/digitalmarketingmsc/"
+            target="_blank"
+            id="link-insta"
           >
-            <path
-              d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.9 3.9 0 0 0-1.417.923A3.9 3.9 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.9 3.9 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.9 3.9 0 0 0-.923-1.417A3.9 3.9 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599s.453.546.598.92c.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.5 2.5 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.5 2.5 0 0 1-.92-.598 2.5 2.5 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233s.008-2.388.046-3.231c.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92s.546-.453.92-.598c.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92m-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217m0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334"
-            />
-          </svg>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="16"
+              height="16"
+              fill="currentColor"
+              class="bi bi-instagram"
+              viewBox="0 0 16 16"
+              id="svg-insta"
+            >
+              <path
+                d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.9 3.9 0 0 0-1.417.923A3.9 3.9 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.9 3.9 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.9 3.9 0 0 0-.923-1.417A3.9 3.9 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599s.453.546.598.92c.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.5 2.5 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.5 2.5 0 0 1-.92-.598 2.5 2.5 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233s.008-2.388.046-3.231c.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92s.546-.453.92-.598c.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92m-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217m0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334"
+              />
+            </svg>
+          </a>
         </div>
       </div>
       <div id="imagens">
@@ -152,21 +164,26 @@
                 asperiores alias ut veritatis voluptas eum reprehenderit quam ut
                 consequuntur impedit.
               </p>
-              <p class="saiba-mais">
-                Saiba mais
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  viewBox="0 0 24 24"
-                  fill="currentColor"
-                  class="seta-saibamais"
-                >
-                  <path
-                    fill-rule="evenodd"
-                    d="M16.72 7.72a.75.75 0 0 1 1.06 0l3.75 3.75a.75.75 0 0 1 0 1.06l-3.75 3.75a.75.75 0 1 1-1.06-1.06l2.47-2.47H3a.75.75 0 0 1 0-1.5h16.19l-2.47-2.47a.75.75 0 0 1 0-1.06Z"
-                    clip-rule="evenodd"
-                  />
-                </svg>
-              </p>
+              <a
+                href="https://api.whatsapp.com/send?phone=5514996443062&text=Ol%C3%A1+Digital+Marketing%2C+vim+pelo+Instagram%2C+gostaria+de+saber+mais+sobre+seus+servi%C3%A7os&fbclid=PAZXh0bgNhZW0CMTEAAaeWxXMN8wS_0Ybp7Zpf1axfaGh8TGPq0yelaZ-cDQOukfPlV2aeXeD0p8vf8A_aem_eRjnWI4mqwaZL-htIx57pA"
+                target="_blank"
+              >
+                <p class="saiba-mais">
+                  Saiba mais
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 24 24"
+                    fill="currentColor"
+                    class="seta-saibamais"
+                  >
+                    <path
+                      fill-rule="evenodd"
+                      d="M16.72 7.72a.75.75 0 0 1 1.06 0l3.75 3.75a.75.75 0 0 1 0 1.06l-3.75 3.75a.75.75 0 1 1-1.06-1.06l2.47-2.47H3a.75.75 0 0 1 0-1.5h16.19l-2.47-2.47a.75.75 0 0 1 0-1.06Z"
+                      clip-rule="evenodd"
+                    />
+                  </svg>
+                </p>
+              </a>
             </div>
           </div>
           <div class="conteudo-servico">
@@ -191,21 +208,26 @@
                 asperiores alias ut veritatis voluptas eum reprehenderit quam ut
                 consequuntur impedit.
               </p>
-              <p class="saiba-mais">
-                Saiba mais
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  viewBox="0 0 24 24"
-                  fill="currentColor"
-                  class="seta-saibamais"
-                >
-                  <path
-                    fill-rule="evenodd"
-                    d="M16.72 7.72a.75.75 0 0 1 1.06 0l3.75 3.75a.75.75 0 0 1 0 1.06l-3.75 3.75a.75.75 0 1 1-1.06-1.06l2.47-2.47H3a.75.75 0 0 1 0-1.5h16.19l-2.47-2.47a.75.75 0 0 1 0-1.06Z"
-                    clip-rule="evenodd"
-                  />
-                </svg>
-              </p>
+              <a
+                href="https://api.whatsapp.com/send?phone=5514996443062&text=Ol%C3%A1+Digital+Marketing%2C+vim+pelo+Instagram%2C+gostaria+de+saber+mais+sobre+seus+servi%C3%A7os&fbclid=PAZXh0bgNhZW0CMTEAAaeWxXMN8wS_0Ybp7Zpf1axfaGh8TGPq0yelaZ-cDQOukfPlV2aeXeD0p8vf8A_aem_eRjnWI4mqwaZL-htIx57pA"
+                target="_blank"
+              >
+                <p class="saiba-mais">
+                  Saiba mais
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 24 24"
+                    fill="currentColor"
+                    class="seta-saibamais"
+                  >
+                    <path
+                      fill-rule="evenodd"
+                      d="M16.72 7.72a.75.75 0 0 1 1.06 0l3.75 3.75a.75.75 0 0 1 0 1.06l-3.75 3.75a.75.75 0 1 1-1.06-1.06l2.47-2.47H3a.75.75 0 0 1 0-1.5h16.19l-2.47-2.47a.75.75 0 0 1 0-1.06Z"
+                      clip-rule="evenodd"
+                    />
+                  </svg>
+                </p>
+              </a>
             </div>
           </div>
           <div class="conteudo-servico">
@@ -230,21 +252,26 @@
                 asperiores alias ut veritatis voluptas eum reprehenderit quam ut
                 consequuntur impedit.
               </p>
-              <p class="saiba-mais">
-                Saiba mais
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  viewBox="0 0 24 24"
-                  fill="currentColor"
-                  class="seta-saibamais"
-                >
-                  <path
-                    fill-rule="evenodd"
-                    d="M16.72 7.72a.75.75 0 0 1 1.06 0l3.75 3.75a.75.75 0 0 1 0 1.06l-3.75 3.75a.75.75 0 1 1-1.06-1.06l2.47-2.47H3a.75.75 0 0 1 0-1.5h16.19l-2.47-2.47a.75.75 0 0 1 0-1.06Z"
-                    clip-rule="evenodd"
-                  />
-                </svg>
-              </p>
+              <a
+                href="https://api.whatsapp.com/send?phone=5514996443062&text=Ol%C3%A1+Digital+Marketing%2C+vim+pelo+Instagram%2C+gostaria+de+saber+mais+sobre+seus+servi%C3%A7os&fbclid=PAZXh0bgNhZW0CMTEAAaeWxXMN8wS_0Ybp7Zpf1axfaGh8TGPq0yelaZ-cDQOukfPlV2aeXeD0p8vf8A_aem_eRjnWI4mqwaZL-htIx57pA"
+                target="_blank"
+              >
+                <p class="saiba-mais">
+                  Saiba mais
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 24 24"
+                    fill="currentColor"
+                    class="seta-saibamais"
+                  >
+                    <path
+                      fill-rule="evenodd"
+                      d="M16.72 7.72a.75.75 0 0 1 1.06 0l3.75 3.75a.75.75 0 0 1 0 1.06l-3.75 3.75a.75.75 0 1 1-1.06-1.06l2.47-2.47H3a.75.75 0 0 1 0-1.5h16.19l-2.47-2.47a.75.75 0 0 1 0-1.06Z"
+                      clip-rule="evenodd"
+                    />
+                  </svg>
+                </p>
+              </a>
             </div>
           </div>
         </div>
@@ -281,21 +308,26 @@
                 asperiores alias ut veritatis voluptas eum reprehenderit quam ut
                 consequuntur impedit.
               </p>
-              <p class="saiba-mais">
-                Saiba mais
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  viewBox="0 0 24 24"
-                  fill="currentColor"
-                  class="seta-saibamais"
-                >
-                  <path
-                    fill-rule="evenodd"
-                    d="M16.72 7.72a.75.75 0 0 1 1.06 0l3.75 3.75a.75.75 0 0 1 0 1.06l-3.75 3.75a.75.75 0 1 1-1.06-1.06l2.47-2.47H3a.75.75 0 0 1 0-1.5h16.19l-2.47-2.47a.75.75 0 0 1 0-1.06Z"
-                    clip-rule="evenodd"
-                  />
-                </svg>
-              </p>
+              <a
+                href="https://api.whatsapp.com/send?phone=5514996443062&text=Ol%C3%A1+Digital+Marketing%2C+vim+pelo+Instagram%2C+gostaria+de+saber+mais+sobre+seus+servi%C3%A7os&fbclid=PAZXh0bgNhZW0CMTEAAaeWxXMN8wS_0Ybp7Zpf1axfaGh8TGPq0yelaZ-cDQOukfPlV2aeXeD0p8vf8A_aem_eRjnWI4mqwaZL-htIx57pA"
+                target="_blank"
+              >
+                <p class="saiba-mais">
+                  Saiba mais
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 24 24"
+                    fill="currentColor"
+                    class="seta-saibamais"
+                  >
+                    <path
+                      fill-rule="evenodd"
+                      d="M16.72 7.72a.75.75 0 0 1 1.06 0l3.75 3.75a.75.75 0 0 1 0 1.06l-3.75 3.75a.75.75 0 1 1-1.06-1.06l2.47-2.47H3a.75.75 0 0 1 0-1.5h16.19l-2.47-2.47a.75.75 0 0 1 0-1.06Z"
+                      clip-rule="evenodd"
+                    />
+                  </svg>
+                </p>
+              </a>
             </div>
           </div>
           <div class="conteudo-servico">
@@ -322,21 +354,26 @@
                 asperiores alias ut veritatis voluptas eum reprehenderit quam ut
                 consequuntur impedit.
               </p>
-              <p class="saiba-mais">
-                Saiba mais
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  viewBox="0 0 24 24"
-                  fill="currentColor"
-                  class="seta-saibamais"
-                >
-                  <path
-                    fill-rule="evenodd"
-                    d="M16.72 7.72a.75.75 0 0 1 1.06 0l3.75 3.75a.75.75 0 0 1 0 1.06l-3.75 3.75a.75.75 0 1 1-1.06-1.06l2.47-2.47H3a.75.75 0 0 1 0-1.5h16.19l-2.47-2.47a.75.75 0 0 1 0-1.06Z"
-                    clip-rule="evenodd"
-                  />
-                </svg>
-              </p>
+              <a
+                href="https://api.whatsapp.com/send?phone=5514996443062&text=Ol%C3%A1+Digital+Marketing%2C+vim+pelo+Instagram%2C+gostaria+de+saber+mais+sobre+seus+servi%C3%A7os&fbclid=PAZXh0bgNhZW0CMTEAAaeWxXMN8wS_0Ybp7Zpf1axfaGh8TGPq0yelaZ-cDQOukfPlV2aeXeD0p8vf8A_aem_eRjnWI4mqwaZL-htIx57pA"
+                target="_blank"
+              >
+                <p class="saiba-mais">
+                  Saiba mais
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 24 24"
+                    fill="currentColor"
+                    class="seta-saibamais"
+                  >
+                    <path
+                      fill-rule="evenodd"
+                      d="M16.72 7.72a.75.75 0 0 1 1.06 0l3.75 3.75a.75.75 0 0 1 0 1.06l-3.75 3.75a.75.75 0 1 1-1.06-1.06l2.47-2.47H3a.75.75 0 0 1 0-1.5h16.19l-2.47-2.47a.75.75 0 0 1 0-1.06Z"
+                      clip-rule="evenodd"
+                    />
+                  </svg>
+                </p>
+              </a>
             </div>
           </div>
           <div class="conteudo-servico">
@@ -366,21 +403,26 @@
                 asperiores alias ut veritatis voluptas eum reprehenderit quam ut
                 consequuntur impedit.
               </p>
-              <p class="saiba-mais">
-                Saiba mais
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  viewBox="0 0 24 24"
-                  fill="currentColor"
-                  class="seta-saibamais"
-                >
-                  <path
-                    fill-rule="evenodd"
-                    d="M16.72 7.72a.75.75 0 0 1 1.06 0l3.75 3.75a.75.75 0 0 1 0 1.06l-3.75 3.75a.75.75 0 1 1-1.06-1.06l2.47-2.47H3a.75.75 0 0 1 0-1.5h16.19l-2.47-2.47a.75.75 0 0 1 0-1.06Z"
-                    clip-rule="evenodd"
-                  />
-                </svg>
-              </p>
+              <a
+                href="https://api.whatsapp.com/send?phone=5514996443062&text=Ol%C3%A1+Digital+Marketing%2C+vim+pelo+Instagram%2C+gostaria+de+saber+mais+sobre+seus+servi%C3%A7os&fbclid=PAZXh0bgNhZW0CMTEAAaeWxXMN8wS_0Ybp7Zpf1axfaGh8TGPq0yelaZ-cDQOukfPlV2aeXeD0p8vf8A_aem_eRjnWI4mqwaZL-htIx57pA"
+                target="_blank"
+              >
+                <p class="saiba-mais">
+                  Saiba mais
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 24 24"
+                    fill="currentColor"
+                    class="seta-saibamais"
+                  >
+                    <path
+                      fill-rule="evenodd"
+                      d="M16.72 7.72a.75.75 0 0 1 1.06 0l3.75 3.75a.75.75 0 0 1 0 1.06l-3.75 3.75a.75.75 0 1 1-1.06-1.06l2.47-2.47H3a.75.75 0 0 1 0-1.5h16.19l-2.47-2.47a.75.75 0 0 1 0-1.06Z"
+                      clip-rule="evenodd"
+                    />
+                  </svg>
+                </p>
+              </a>
             </div>
           </div>
         </div>
